log
Tue 14 May 2024 06:48:22 AM UTC: 
 tests:  0|5
total_score: 0/70
1213041
Tue 14 May 2024 07:02:15 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
a3b4d7c
Tue 14 May 2024 07:03:33 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
ddeef16
Tue 14 May 2024 07:10:01 AM UTC: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
c1014b2
Tue 14 May 2024 07:11:06 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:17: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   67 |                 pushBack(list,aux);
      |                 ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b9ee5d7
Tue 14 May 2024 07:11:37 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
58a2ddd
Tue 14 May 2024 07:12:45 AM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d91a845
Tue 14 May 2024 07:13:05 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
1844689
Tue 14 May 2024 07:16:55 AM UTC: 
 sudoku.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
4f45993
Wed 15 May 2024 11:16:45 PM UTC: 
 sudoku.c | 15 ---------------
 1 file changed, 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:11: error: unused variable ‘j’ [-Werror=unused-variable]
   57 |     int i,j;
      |           ^
sudoku.c:57:9: error: unused variable ‘i’ [-Werror=unused-variable]
   57 |     int i,j;
      |         ^
sudoku.c:56:9: error: unused variable ‘o’ [-Werror=unused-variable]
   56 |     int o = 1;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
cf5152e
Thu 16 May 2024 01:11:57 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
69006c2
Thu 16 May 2024 01:12:39 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:41: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   67 |                 pushBack(list,n->sudo[i][j])
      |                               ~~~~~~~~~~^~~
      |                                         |
      |                                         int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:67:45: error: expected ‘;’ before ‘}’ token
   67 |                 pushBack(list,n->sudo[i][j])
      |                                             ^
      |                                             ;
   68 |              }
      |              ~                               
cc1: all warnings being treated as errors
Compilation failed
e2268ab
Thu 16 May 2024 01:12:59 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
dfab1ff
Thu 16 May 2024 01:13:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
354c8ea
Thu 16 May 2024 01:14:57 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f6638de
Thu 16 May 2024 01:15:44 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
0b38b0c
Thu 16 May 2024 01:18:16 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5941d3a
Thu 16 May 2024 01:18:43 AM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3769293
Thu 16 May 2024 01:19:58 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6e65842
Thu 16 May 2024 01:20:50 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ba007b3
Thu 16 May 2024 01:21:16 AM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
71c036d
Thu 16 May 2024 01:21:28 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
0f90106
Thu 16 May 2024 01:21:59 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
eff2440
Thu 16 May 2024 01:25:33 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3395355
Thu 16 May 2024 01:27:28 AM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:44: error: ‘adj’ undeclared (first use in this function); did you mean ‘adj2’?
   66 |                          Node* adj2 = copy(adj);
      |                                            ^~~
      |                                            adj2
sudoku.c:66:44: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bfe6f50
Thu 16 May 2024 01:27:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bccc4a7
Thu 16 May 2024 01:41:34 AM UTC: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
 tests:  5|3
total_score: 35/70
308bdd3
Thu 16 May 2024 02:36:41 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|3
total_score: 35/70
1bbc0fe
Thu 16 May 2024 02:37:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ec3f509
Thu 16 May 2024 03:15:02 AM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  6|2
total_score: 45/70
ef9a041
Thu 16 May 2024 03:17:37 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
5717f47
Thu 16 May 2024 03:18:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7345ab5
Thu 16 May 2024 03:28:12 AM UTC: 
 sudoku.c | 18 ++----------------
 1 file changed, 2 insertions(+), 16 deletions(-)
 tests:  6|2
total_score: 45/70
ae4786b
